2010-04-16  David King  <davidk@openismus.com>

	Minor documentation update

	* docs/index.html: Link to latest gnome.org resources.
	* libxml++/libxml++.h: Add minimal documentation for main page.

2010-04-06  Murray Cumming  <murrayc@murrayc.com>

    .pc file: Add datarootdir.

	* libxml++-2.6.pc.in: Add datarootdir and datadir, as in the gtkmm .pc.in 
    file, because I started seeing this warning when running autogen.sh in Glom:
    Variable 'datarootdir' not defined in '/opt/gnome228/lib/pkgconfig/libxml++-2.6.pc'

2010-04-03  Armin Burgmeier  <armin@arbur.net>

	* MSVC_Net2005/libxml++.sln:
	* MSVC_Net2008/libxml++.sln: Add dom_parser_raw project to the
	solution files.

2010-03-30  Murray Cumming  <murrayc@murrayc.com>

    Stop exceptions when using std::cout and UTF-8.

	* examples/*/main.cc: Initialize the global C and C++ locale to prevent 
    exceptions when ouputing a ustring (with non-ASCII UTF-8) to std::cout.
    We don't see this problem when writing gtkmm apps because gtk_init() (via 
    Gtk::Main) initializes the C locale correctly.

    Thanks to Daniel Elstner for the solution (he will document it properly 
    in the Glib::ustring API reference) and to Nic Reveles and others for 
    noticing the problem.

2010-03-30  David King  <davidk@openismus.com>

	Update pkg-config file

	* libxml++-2.6.pc.in: Add documentation locations to pkg-config file.
	Update other fields to use variables, rather than hardcoded values.

=== 2.30.0 ===

2010-03-30  David King  <davidk@openismus.com>

	Disable AM_MAINTAINER_MODE by default

	* configure.ac: Pass the disable parameter to AM_MAINTAINER_MODE so
	that tarball users do not need doxygen, mm-common, etc. if they modify
	files. Maintainer mode is still enabled if running autogen.sh.

2010-03-29  David King  <davidk@openismus.com>

	Move a target outside a conditional block to fix the build

	* Makefile.am: Move docs/manual/libxml++.xml target outside the
	ENABLE_DOCUMENTATION conditional block.
